k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-api-stable
  labels:
    app: index-api-stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: index-api-stable
  template:
    metadata:
      labels:
        app: index-api-stable
    spec:
      containers:
        - name: index-api
          image: eu.gcr.io/index-352608/index-api-test:latest
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /kube/startup
              port: 80
            failureThreshold: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /kube/readiness
              port: 80
            failureThreshold: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /kube/liveness
              port: 80
            failureThreshold: 1
            periodSeconds: 10
      imagePullSecrets:
        - name: gcr-json-key
