k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: index-api-stable
  labels:
    app: index-api-stable
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: index-api-stable
